# ai-brainrot-trumps

./: .gitignore  README.md  main.py  pyproject.toml  scrape_brainrot.py
resources/private/characters/: A_A_A_A_A_A_A_A_A_A_Sahur.json  Aduh_9_April_Udah_Dekat.json  Agarrini_la_Palini.json  Alamak_Senin_Sekolah.json  Alessio.json  Antonio.json  Api_Pipi_Pi.json  Avocadini_Antilopini.json  Ballerina_Cappucina.json  Ballerina_Cococolina.json  Ballerino_Lololo.json  Bambini_Crostini.json  Bananita_Dolfinita.json  Bedug_Kutud_Black_Kuduk_Kuduk_Bekuk_Bengkok.json  Blueberrinni_Octopussini.json  Bobrelli_Bananelli.json  Bobrinni_Kokokosinni.json  Bobrito_Bandito.json  Bombardini_Tortini.json  Bombardiro_Crocodilo.json  Bomboclat_Crococlat.json  Bombombini_Gusini.json  Boneca_Ambalabu.json  Brr_Brr_Patapim.json  Brr_Potato_Na_Potate.json  Brri_Brri_Bicus_Dicus_Bombicus.json  Bu_Dididi_Dun_Budi_Andun_Dan_Dundin.json  Bulliccinni_Bananini.json  Burbaloni_Lulilolli.json  Cappuccina_Modelina.json  Cappuccino_Assassino.json  Capybarelli_Bananalelli.json  Carloo.json  Catini_Strawberini.json  Cek_Cek_Cek_123_Sahur.json  Chachechichachachachi.json  Chai_Maestro.json  Chef_Crabracadabra.json  Chicleteira_Bicicleteira.json  Chimpanzini_Bananini.json  (+86 more)
resources/private/database/: database.db  database_backup.db
scripts/: init_database.sql
src/: move.py  trading_card.py
src/brainrot_tcg/: database.py  definitions.py  generate_pdf.py
src/brainrot_tcg/defs/: assets.py  resources.py
src/brainrot_tcg/enrichment/: base_generator.py  image_sumariser.py  llm_generator.py
src/brainrot_tcg/objects/: rarity.py  top_trumps_card.py
src/brainrot_tcg/scraping/: character_page.py
src/objects/: trading_card.py
tests/: conftest.py  test_assets.py  test_image_sumarizer.py  test_llm_generator.py
tests/resources/: sample_main_page.html  test_database.db  tung_tung.html
