[project]
name = "brainrot-tcg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dagster>=1.13.1",
    "dagster-dg-cli>=1.13.1",
    "dagster-webserver>=1.13.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.0",
    "pydantic-ai>=1.44.0",
    "pydanticai-ollama>=0.1.4",
    "reportlab>=4.4.10",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]

[tool.dg]
directory_type="project"


[tool.dg.project]
root_module = "src.brainrot_tcg"
